# zaino

./: .dockerignore  .env.ci-dep-versions  .env.testing-artifacts  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile.toml  README.md
.config/: nextest.toml
.github/workflows/: build-n-push-ci-image.yaml  cargo-hack.yaml  ci-2.yaml  ci-nightly.yaml  ci.yml  docker.yaml  release.yaml
ci/: build-ci-image.sh  test.sh
docker-ci/: Dockerfile
docs/: internal_spec.md  rpc_api.md  testing.md  use_cases.md
integration-tests/: Cargo.toml
integration-tests/tests/: chain_cache.rs  fetch_service.rs  json_server.rs  local_cache.rs  state_service.rs  test_vectors.rs  wallet_to_validator.rs
integration-tests/tests/zebra/get/: address_deltas.rs
makefiles/: lints.toml
test_environment/: Dockerfile
utils/: benchmark-testing.sh  get-ci-image-tag.sh  helpers.sh
zaino-common/: Cargo.toml
zaino-common/src/: config.rs  lib.rs  network.rs  storage.rs  validator.rs
zaino-common/src/config/: network.rs
zaino-commons/src/: lib.rs  service.rs  storage.rs
zaino-fetch/: Cargo.toml
zaino-fetch/src/: lib.rs
zaino-fetch/src/chain/: block.rs  error.rs  transaction.rs  utils.rs
zaino-fetch/src/jsonrpc/: connector.rs  response.rs
zaino-fetch/src/jsonrpsee/: connector.rs  error.rs  response.rs
zaino-fetch/src/jsonrpsee/response/: address_deltas.rs  block_deltas.rs  block_header.rs  block_subsidy.rs  common.rs  convert.rs  internal.rs  mining_info.rs  peer_info.rs
zaino-fetch/src/jsonrpsee/response/common/: amount.rs
zaino-proto/lightwallet-protocol/walletrpc/: compact_formats.proto
zaino-proto/src/proto/: compact_formats.rs
zaino-serve/: Cargo.toml
zaino-serve/src/: rpc.rs
zaino-serve/src/rpc/grpc/: service.rs
zaino-serve/src/rpc/jsonrpc/: service.rs
zaino-serve/src/server/: config.rs  grpc.rs  jsonrpc.rs
zaino-state/: Cargo.toml  build.rs
zaino-state/src/: chain_index.rs  config.rs  error.rs  fetch.rs  indexer.rs  lib.rs  local_cache.rs  mempool.rs  state.rs  status.rs  utils.rs
zaino-state/src/backends/: fetch.rs  state.rs
zaino-state/src/chain_index/: encoding.rs  finalised_state.rs  interface.rs  mempool.rs  non_finalised_state.rs  source.rs  tests.rs  types.rs
zaino-state/src/chain_index/finalised_state/: capability.rs  db.rs  entry.rs  migrations.rs  reader.rs  router.rs
zaino-state/src/chain_index/finalised_state/db/: db_schema_v1.txt  v0.rs  v1.rs
zaino-state/src/chain_index/tests/: finalised_state.rs  mempool.rs  vectors.rs
zaino-state/src/chain_index/tests/finalised_state/: migrations.rs  v0.rs  v1.rs
zaino-state/src/chain_index/tests/vectors/: faucet_data.json  recipient_data.json
zaino-state/src/chain_index/types/: commitment.rs  db.rs  helpers.rs  primitives.rs
zaino-state/src/chain_index/types/db/: address.rs  block.rs  commitment.rs  legacy.rs  primitives.rs  shielded.rs  transaction.rs
zaino-state/src/chain_index/types/primitives/: tree_size.rs
zaino-state/src/local_cache/: finalised_state.rs  mempool.rs  non_finalised_state.rs
zaino-state/src/local_cache/non_finalised_state/: concurrent_cache.rs
zaino-testutils/: Cargo.toml
zaino-testutils/src/: lib.rs  test_vectors.rs
zaino-testutils/src/test_vectors/: transactions.rs
zaino-testvectors/: Cargo.toml
zainod/: Cargo.toml  zindexer.toml
zainod/src/: config.rs  error.rs  indexer.rs  main.rs
zainod/tests/: config.rs
