# Workspace Members are in dependency order, do not change this without prior consideration.
[workspace]
members = [
    "integration-tests",
    "zaino-testutils",
    "zainod",
    "zaino-serve",
    "zaino-state",
    "zaino-fetch",
    "zaino-proto",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"
version = "0.1.2"


[workspace.dependencies]
# Zingolabs
# Should be updated to crates.io releases when available.
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "2.0.0-beta2", features = [
    "test-elevation",
] }
testvectors = { git = "https://github.com/zingolabs/zingolib.git", tag = "2.0.0-beta2" }
zingo-infra-testutils = { git = "https://github.com/zingolabs/infrastructure.git", rev = "7509a6d26c6424b2e22585fabd0bb974bff6bf55" }
zingo-infra-services = { git = "https://github.com/zingolabs/infrastructure.git", rev = "7509a6d26c6424b2e22585fabd0bb974bff6bf55" }

# Librustzcash
zcash_client_backend = { version = "0.18.0", features = ["lightwalletd-tonic"] }
zcash_protocol = "0.5.1"
zcash_primitives = "0.22"
zcash_transparent = "0.3"

# Zebra
# Can be updated to 2.4.0 once lands. Should be updated to crates.io releases once available.
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", rev = "0893e1a7f499cadad1d9480216b3057dfd7900c7" }
zebra-state = { git = "https://github.com/ZcashFoundation/zebra.git", rev = "0893e1a7f499cadad1d9480216b3057dfd7900c7" }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", rev = "0893e1a7f499cadad1d9480216b3057dfd7900c7" }

# Runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = "4.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "time",
] }
tracing-futures = "0.2"

# Network / RPC
http = "1.1"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "rustls-tls",
] }
tower = { version = "0.4", features = ["buffer", "util"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
serde = "1.0"
serde_json = "1.0"
jsonrpsee-core = "0.24"
jsonrpsee-types = "0.24"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
hyper = "1.6"

# Hashmaps, channels, DBs
indexmap = "2.2.6"
crossbeam-channel = "0.5"
dashmap = "6.1"
lmdb = "0.8"
lmdb-sys = "0.8"

# Async
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3.30"

# Utility
thiserror = "1.0"
lazy-regex = "3.3"
once_cell = "1.20"
ctrlc = "3.4"
chrono = "0.4"
which = "4"
whoami = "1.5"
core2 = "0.4"

# Formats
base64 = "0.22"
byteorder = "1.5"
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
toml = "0.5"
primitive-types = "0.13"
bs58 = "0.5"
bitflags = "2.9"

# Test
portpicker = "0.1"
tempfile = "3.2"
zaino-fetch = { path = "zaino-fetch" }
zaino-proto = { path = "zaino-proto" }
zaino-serve = { path = "zaino-serve" }
zaino-state = { path = "zaino-state" }
zaino-testutils = { path = "zaino-testutils" }
zainod = { path = "zainod" }
figment = "0.10"
nonempty = "0.11.0"
proptest = "~1.2"
zcash_address = "0.7.1"

# Patch for vulnerable dependency
slab = "0.4.11"

[profile.test]
opt-level = 3
debug = true
