[package]
name = "integration-tests"
description = "Crate containing Zaino's integration-tests."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
# Test utility
zaino-testutils = { workspace = true }
zaino-fetch = { workspace = true }
zaino-proto.workspace = true
zaino-state = { workspace = true, features = ["bench"] }
zebra-chain.workspace = true
zebra-state.workspace = true
zebra-rpc.workspace = true
zingolib = { workspace = true }
core2 = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
futures.workspace = true

# Runtime
tokio = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Url
url = { workspace = true }

[dev-dependencies]
anyhow = "1.0"