[package]
name = "integration-tests"
description = "Crate containing Zaino's integration-tests."
publish = false

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
# Test utility
zaino-testutils = { workspace = true }
zaino-fetch = { workspace = true }
zaino-proto.workspace = true
zaino-common.workspace = true
zaino-state = { workspace = true, features = ["bench"] }
zebra-chain.workspace = true
zebra-state.workspace = true
zebra-rpc.workspace = true
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "2.0.0-beta2", features = [
    "test-elevation",
] }

core2 = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
futures.workspace = true
tempfile.workspace = true

# Runtime
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
