[package]
name = "zaino-common"
description = "Common types and configurations shared across Zaino crates."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
# Zebra
zebra-chain = { workspace = true }

# Zingo Infrastructure
# Serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
zingo-infra-services = { git = "https://github.com/zingolabs/infrastructure.git", rev = "7509a6d26c6424b2e22585fabd0bb974bff6bf55" }

