[package]
name = "zaino-common"
description = "Common types and configurations shared across Zaino crates."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
# Zebra
zebra-chain = { workspace = true }

# Zingo Infrastructure
# Serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
zingo-infra-services = { git = "https://github.com/zingolabs/infrastructure.git", rev = "6c8ad003491371c2e387c5f9d3ba35c45286257b" }

