[package]
name = "zaino-state"
description = "A mempool and chain-fetching service built on top of zebra's ReadStateService and TrustedChainSync."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
# (Work)bench - Exposes internal functionality for testing.
bench = []

[dependencies]
zaino-common = { workspace = true }
zaino-fetch = { workspace = true }
zaino-proto = { workspace = true }

# LibRustZcash
zcash_address = { workspace = true }
zcash_keys = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
zcash_transparent = { workspace = true }

# Zebra
zebra-chain = { workspace = true }
zebra-state = { workspace = true }
zebra-rpc = { workspace = true }

# Tracing
tracing = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower = { workspace = true, features = ["buffer", "util"] }
async-trait = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
hex = { workspace = true, features = ["serde"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
lazy-regex = { workspace = true }
dashmap = { workspace = true }
lmdb = { workspace = true }
lmdb-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
jsonrpsee-core = { workspace = true }
prost = { workspace = true }
primitive-types = { workspace = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
byteorder = { workspace = true }
core2 = { workspace = true }
bs58 = { workspace = true }
nonempty = { workspace = true }
arc-swap = { workspace = true }
reqwest.workspace = true
bitflags = { workspace = true }
derive_more = { workspace = true, features = ["from"] }

[dev-dependencies]
zingo-infra-services = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
whoami = { workspace = true }
cargo-lock = { workspace = true }
