[package]
name = "zaino-testutils"
description = "Crate containing Zaino test specific functionality."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
zaino-state = { workspace = true, features = ["bench"] }
zaino-testvectors.workspace = true
zaino-common.workspace = true

# Librustzcash
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b", features = [
  "local-consensus",
] }
zcash_client_backend = { workspace = true, features = ["lightwalletd-tonic"] }

# Zebra
zebra-chain = { workspace = true }

# Zingo-infra
zingo-infra-services = { git = "https://github.com/zingolabs/infrastructure.git", rev = "6c8ad003491371c2e387c5f9d3ba35c45286257b" }
zingo_common_components = { git = "https://github.com/zingolabs/infrastructure.git", rev = "6c8ad003491371c2e387c5f9d3ba35c45286257b", features = [ "test" ]}

# ZingoLib
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "bdb5a0aa7b8bb62300cdb6272e7102fa98f388af", features = [
    "test-elevation",
] }
testvectors = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "time",
] }

# Miscellaneous
tokio = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
tempfile = { workspace = true }
portpicker = { workspace = true }
once_cell = { workspace = true }

zainod = { workspace = true }

# We don't need this as a direct dependency.
# Rather, we need to pin this version of proptest.
# if we don't, cargo update will update to the semver-compatible
# version 1.7, which depends on rand-0.9.1.
# This causes compiler errors in incrementalmerkletree, due a conflict
# with its rand version of 0.8.5.
# TODO: Investigate whether proptest has violated semver guarentees with
# its rand version update.
proptest = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
zingo-netutils = { workspace = true }
